--- a/app/src/main/res/layout/recycler_view_element_layout.xml
+++ b/app/src/main/res/layout/recycler_view_element_layout.xml
@@ -2,10 +2,10 @@
 
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycler_view_parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dip"
-    android:id="@+id/recycler_view_parent_layout">
+    android:layout_margin="4dip">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,8 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:maxWidth="25dp"
-            android:maxHeight="25dp"
+            android:maxWidth="50dip"
+            android:maxHeight="50dip"
             android:paddingStart="5dip"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background" />
@@ -27,6 +27,7 @@
             android:id="@+id/recycler_view_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:paddingStart="15dip"
             android:text="PLACEHOLDER" />
 
